--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,10 +1,27 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;700&display=swap');
+
+:root{
+  --purple-100: #8C00FF;
+  --blue-gray-750: #272D3C;
+  --blue-gray-900: #0A0C12;
+  --blue-gray-950: #07080C;
+  --accua-green-100: #00FF85;
+  --yellow-100: #FF9B04;
+
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
+
+button{
+  cursor: pointer;
+}
+
+
 
 a {
   color: inherit;
