--- a/pages/custom/se7e/Styles.module.scss
+++ b/pages/custom/se7e/Styles.module.scss
@@ -1,11 +1,12 @@
 
 .businessCard{
-    height: 0;
+    height: 100vh;
     width: 100vw;
 
     .videoBackground{
-        height: 100vh;
-        width: 100vw;
+        width: 100%;
+        height: 100%;
+
         position: absolute;
         left: 0;
         top: 0;
@@ -23,7 +24,8 @@
 
         div{
             display: flex;
-            height: 100vh;
+
+            height: inherit;
 
             .profile{
                 flex: 3;
@@ -31,7 +33,7 @@
 
                 display: flex;
                 flex-direction: column;
-                justify-content: center;
+                justify-content: space-around;
                 align-items: center;
 
                 padding: 2rem;
@@ -52,9 +54,30 @@
                     border: 1px solid var(--purple-100);
                 }
 
-                p{
-                    font-size: 1.5rem;
-                    text-align: center;
+
+                .title{
+
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;
+
+                    flex: 1;
+
+                    line-height: 0;
+
+                    height: 100%;
+
+                    h1{
+                        font-size: 1.5rem;
+                        font-weight: normal;
+                    }
+    
+                    p{
+                        font-size: 0.8;
+                        text-align: center;
+                        font-weight: lighter;
+                    }
                 }
 
                 .list{
@@ -88,7 +111,7 @@
             }
 
             .social{
-                flex: 1;
+                flex: 1.2;
                 border-left: 1px solid var(--purple-100);
 
                 display: flex;
@@ -96,20 +119,34 @@
                 justify-content: center;
                 align-items: center;
 
+                gap: 1rem;
+
                 span{
+                    
+                    height: 70px;
+                    width: 70px;
 
-                    height: auto;
-                    width: 100%;
+                    background: var(--blue-gray-950);
 
-                    background: red;
-
+                    
                     border: 0;
+                    border: 1px solid var(--purple-100);
 
                     border-radius: 100%;
 
                     color: #fff;
 
-                    font-size: 2rem;
+                    
+                    a{
+                        height: 100%;
+                        width: 100%;
+
+                        font-size: 2.5rem;
+
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                    }
                 }
             }
         }
