--- a/pages/custom/se7e/styles.module.scss
+++ b/pages/custom/se7e/styles.module.scss
@@ -1,11 +1,11 @@
 
 .businessCard{
-    height: 100vh;
+    height: 95vh;
     width: 100vw;
 
     .videoBackground{
-        width: 100%;
-        height: 100%;
+        width: 100vw;
+        height: 95vh;
 
         position: absolute;
         left: 0;
@@ -13,12 +13,13 @@
         object-fit: cover;
         filter: brightness(1);
         z-index: -1;
+
     }
 
     .container{
         width: 100%;
         height: 100%;
-        max-width: 1120px;
+        max-width: 700px;
         margin: 0 auto;
         z-index: 1;
 
@@ -28,23 +29,24 @@
             height: inherit;
 
             .profile{
+                padding: 1rem;
                 flex: 3;
                 background: var(--blue-gray-900);
-
+                
                 display: flex;
                 flex-direction: column;
-                justify-content: space-around;
+                justify-content: center;
                 align-items: center;
-
-                padding: 2rem;
 
                 text-transform: uppercase;
 
                 color:  #fff;
 
+                gap: 1rem;
+
                 img{
-                    height: auto;
-                    width: 70%;
+                    height: 200px;
+                    width: auto;
                     
                     background: var(--blue-gray-950);
                     
@@ -54,35 +56,10 @@
                     border: 1px solid var(--purple-100);
                 }
 
-
-                .title{
-
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: center;
-                    align-items: center;
-
-                    flex: 1;
-
-                    line-height: 0;
-
-                    height: 100%;
-
-                    h1{
-                        font-size: 1.5rem;
-                        font-weight: normal;
-                    }
-    
-                    p{
-                        font-size: 0.8;
-                        text-align: center;
-                        font-weight: lighter;
-                    }
-                }
-
                 .list{
-                    height: 200px;
                     width: 100%;
+
+                    height: 400px;
 
                     overflow-y: auto;
 
