--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,12 +15,33 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'Poppins', sans-serif;
+  box-sizing: border-box;
 }
 
 button{
   cursor: pointer;
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background: var(--purple-100);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  filter: brightness(0.5);
+}
 
 
 a {
