se7eCard background changed. Layout adjustments

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,7 @@
   --blue-gray-750: #272D3C;
   --blue-gray-900: #0A0C12;
   --blue-gray-950: #07080C;
+  --darker-gray-950: rgb(9, 9, 9);
   --accua-green-100: #00FF85;
   --yellow-100: #FF9B04;
 
