--- a/pages/custom/se7e/styles.module.scss
+++ b/pages/custom/se7e/styles.module.scss
@@ -3,6 +3,15 @@
     height: 100vh;
     width: 100vw;
 
+    @keyframes fadeIn {
+        from {
+            opacity: 0;
+        }
+        to {
+            opacity: 1;
+        }
+    }
+
     .videoBackground{
         width: 100vw;
         height: 100vh;
@@ -11,7 +20,7 @@
         left: 0;
         top: 0;
         object-fit: cover;
-        filter: brightness(1);
+        filter: brightness(10);
         z-index: -1;
     }
 
@@ -24,17 +33,16 @@
 
         div{
             display: flex;
-
             height: inherit;
 
             .profile{
                 padding: 1rem;
                 flex: 3;
-                background: var(--blue-gray-900);
+                background: var(--blue-gray-950);
                 
                 display: flex;
                 flex-direction: column;
-                justify-content: center;
+                justify-content: flex-start;
                 align-items: center;
 
                 text-transform: uppercase;
@@ -43,23 +51,40 @@
 
                 gap: 1rem;
 
-                img{
-                    height: 200px;
-                    width: auto;
-                    
-                    background: var(--blue-gray-950);
-                    
-                    border-radius: 100%;
-                    padding: 1rem;
+                padding-bottom: 5rem;
 
-                    border: 1px solid var(--purple-100);
+                .headInfo{
+
+                    animation: fadeIn 1s ease-in-out;
+
+                    flex: 1;
+
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: center;
+
+                    line-height: 0;
+
+                    img{
+                        height: 200px;
+                        width: auto;
+                        
+                        background: var(--blue-gray-950);
+                        
+                        border-radius: 100%;
+                        padding: 1rem;
+    
+                        border: 1px solid var(--purple-100);
+                    }
                 }
 
                 .list{
+                    animation: fadeIn 1s ease-in-out;
+
                     width: 100%;
-
-                    height: 400px;
-
+                    
+                    flex: 2;
                     overflow-y: auto;
 
                     display: flex;
@@ -87,6 +112,8 @@
             }
 
             .social{
+                animation: fadeIn 1s ease-in-out;
+
                 flex: 1.2;
                 border-left: 1px solid var(--purple-100);
 
