grayscale in video background in se7eCard

--- a/pages/custom/se7e/styles.module.scss
+++ b/pages/custom/se7e/styles.module.scss
@@ -20,7 +20,7 @@
         left: 0;
         top: 0;
         object-fit: cover;
-        filter: brightness(10);
+        filter: grayscale(100%);
         z-index: -1;
     }
 
