--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,6 +9,11 @@
   --accua-green-100: #00FF85;
   --yellow-100: #FF9B04;
 
+  /* For you color */
+  --foryou-green-700: #006F67;
+  --foryou-green-100: #3EFFF2;
+  --foryou-green-400: #4ba8a2db;
+
 }
 
 html,
