--- a/pages/custom/foryoucg/components/modal/styles.module.scss
+++ b/pages/custom/foryoucg/components/modal/styles.module.scss
@@ -26,16 +26,21 @@
 
         font-size: 2.5rem;
 
+        
         color: var(--foryou-green-100);
-
+        
     }
-
+    
     p{
         display: flex;
         justify-content: center;
         align-items: center;
 
+        text-align: center;
+
         text-transform: uppercase;
+
+        margin: 0;
 
     }
 }
