--- a/src/components/se7e/MakeByToast/styles.module.scss
+++ b/src/components/se7e/MakeByToast/styles.module.scss
@@ -7,6 +7,7 @@
         font-weight: bold;
         text-transform: uppercase;
         text-align: inherit;
+        font-size: 1rem;
     }
 
     a{
