--- a/src/pages/LadingPage/components/HomeSection/styles.module.scss
+++ b/src/pages/LadingPage/components/HomeSection/styles.module.scss
@@ -42,51 +42,84 @@
         .text{
             flex: 1;
             display: flex;
-            align-items: flex-start;
+            align-items: center;
             justify-content: center;
             flex-direction: column;
 
-            h1{
-                font-size: 2.8rem;
-                line-height: 3rem;
-                font-weight: 500;
-        
-                .textSerif{
-                    font-family: 'Sorts Mill Goudy', serif;
-                }
-        
-                .textDisplay{
-                    font-family: 'Play', sans-serif;
-                    color: var(--purple-100);
-                }
-        
-                &::after{
-                    content: '';
-                    display: block;
-                    width: 100%;
-                    height: 1px;
-                    background: var(--purple-100);
-                    margin-top: 1rem;
-                }
-            }
-        
-            p{
-                margin: 0;
-                font-size: 1.4rem;
-                font-weight: 200;
-            }
-        
-            button{
-                padding: 0.5rem;
-                width: 100px;
-                background: var(--purple-100);
+            gap: 2rem;
+
+            .header{
+                display: flex;
+                flex-direction: column;
                 
-                border-radius: 0 0.3rem 0.3rem 0;
+                h1{
+                    font-size: 2.8rem;
+                    line-height: 3rem;
+                    font-weight: 500;
+                    
+                    margin: 0;
+
+                    .textSerif{
+                        font-family: 'Sorts Mill Goudy', serif;
+                    }
+            
+                    .textDisplay{
+                        font-family: 'Play', sans-serif;
+                        color: var(--purple-100);
+                    }
+            
+                    &::after{
+                        content: '';
+                        display: block;
+                        width: 100%;
+                        height: 1px;
+                        background: var(--purple-100);
+                        margin-top: 1rem;
+                    }
+                }
+            
+                p{
+                    font-size: 1.4rem;
+                    font-weight: 200;
+                    margin: 0;
+                }
+            }
         
-                font-weight: bold;
-        
-                text-transform: inherit;
-                color: #fff;
+            .waitingList{
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+
+                p{
+                    font-size: 0.8rem;
+                    margin: 0;
+                }
+
+                div{
+                    input{
+                        flex: 3;
+                        padding: 0.5rem;
+                        
+                        border: 0;
+                        border-radius: 0.3rem 0 0 0.3rem;
+                        
+                    }
+    
+                    button{
+                        flex: 1;
+    
+                        padding: 0.5rem;
+                        width: 100px;
+                        background: var(--purple-100);
+                        
+                        border-radius: 0 0.3rem 0.3rem 0;
+                
+                        font-weight: bold;
+                
+                        text-transform: inherit;
+                        color: #fff;
+                    }
+                }
             }
         }
 
