--- a/src/pages/LadingPage/components/HomeSection/styles.module.scss
+++ b/src/pages/LadingPage/components/HomeSection/styles.module.scss
@@ -91,6 +91,7 @@
                 width: 100%;
                 display: flex;
                 flex-direction: column;
+                gap: 0.5rem;
 
                 p{
                     font-size: 0.8rem;
@@ -105,14 +106,25 @@
                 div{
                     display: flex;
 
-                    input{
-                        width: 100%;
-                        flex: 3;
-                        padding: 0.5rem;
-                        
-                        border: 0;
-                        border-radius: 0.3rem 0 0 0.3rem;
-                        
+                    .inputs{
+                        input{
+                            border: 0;
+                            flex: 3;
+                            width: 100%;
+
+                            padding: 0.5rem;
+
+                            background: var(--blue-gray-950);
+
+                            color: #fff;
+
+                            border-bottom: 1px solid var(--purple-100);
+                        }
+
+                        & :first-child{                            
+                            border-right: 1px solid var(--purple-100);
+                        }
+
                     }
     
                     button{
