sections height adjustment

--- a/src/pages/LadingPage/components/ContactSection/styles.module.scss
+++ b/src/pages/LadingPage/components/ContactSection/styles.module.scss
@@ -1,7 +1,7 @@
 .contact{
     background: var(--blue-gray-950);
 
-    height: 100vh;
+    height: calc(100vh - var(--header-height));
     width: 100%;
 
     padding: 1.5rem;
