--- a/src/pages/LadingPage/components/Header/styles.module.scss
+++ b/src/pages/LadingPage/components/Header/styles.module.scss
@@ -2,7 +2,7 @@
 
     background: var(--blue-gray-900);
 
-    height: 80px;
+    height: var(--header-height);
     width: 100%;
 
     display: flex;
