--- a/src/pages/styles/globals.scss
+++ b/src/pages/styles/globals.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;700&display=swap');
 
 :root{
-  --purple-100: #8C00FF;
+  --purple-100: #6200ff;
   --blue-gray-750: #272D3C;
   --blue-gray-900: #0A0C12;
   --blue-gray-950: #07080C;
