--- a/src/pages/LadingPage/components/QAsection/CollapseCard/styles.module.scss
+++ b/src/pages/LadingPage/components/QAsection/CollapseCard/styles.module.scss
@@ -18,7 +18,7 @@
 
         border: 1px solid var(--purple-100);
         
-        padding: 0.5rem;
+        padding: 1rem;
 
         width: 100%;
 
@@ -27,6 +27,8 @@
         font-weight: normal;
 
         font-size: 0.8rem;
+
+        margin: 0;
     }
 
     p{
@@ -39,7 +41,7 @@
 
         position: relative;
 
-        padding: 10px;
+        padding: 0.8rem;
 
         &::before{
             content: ' ';
