--- a/src/pages/LadingPage/components/Footer/styles.module.scss
+++ b/src/pages/LadingPage/components/Footer/styles.module.scss
@@ -27,8 +27,10 @@
 
         div{
             display: flex;
-            flex-direction: column;
-    
+            flex-direction: row;
+            justify-content: center;
+            gap: 2rem;
+
             ul{
                 .listTitle{
                     font-weight: bold;
@@ -77,8 +79,8 @@
             div{
                 width: 100%;
                 
-                flex-direction: row;
-                justify-content: center;
+                // flex-direction: row;
+                // justify-content: center;
                 gap: 5rem;
                 
             }
