--- a/src/pages/LadingPage/components/ToolsSection/ToolCard/styles.module.scss
+++ b/src/pages/LadingPage/components/ToolsSection/ToolCard/styles.module.scss
@@ -22,11 +22,22 @@
         color: var(--purple-100);
     }
 
-    p{
+    .text{
         font-size: 1rem;
         font-weight: 300;
         margin-bottom: 0;
         text-transform: initial;
+    }
+
+    .comment{
+        font-size: 0.8rem;
+        font-weight: 300;
+
+        margin-bottom: 0;
+
+        text-transform: initial;
+
+        color: var(--purple-100);
     }
 
 }
