--- a/src/components/landingPage/ToolsSection/ToolCard/styles.module.scss
+++ b/src/components/landingPage/ToolsSection/ToolCard/styles.module.scss
@@ -2,7 +2,7 @@
 
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
 
     height: 350px;
@@ -12,21 +12,28 @@
     border-radius: 0.3rem;
 
 
-    padding: 0.5rem;
+    padding: 0.5rem 1rem;
 
     h4{
-        font-size: 0.8rem;
+        font-size: 1rem;
         font-weight: 500;
         margin-bottom: 0;
 
         color: var(--purple-100);
+
+        text-align: center;
     }
 
     .text{
-        font-size: 1rem;
+        font-size: 0.8rem;
         font-weight: 300;
         margin-bottom: 0;
         text-transform: initial;
+
+        display: flex;
+        align-items: center;
+
+        min-height: 100px;
     }
 
     .comment{
